--- a/quiz.3/index.html
+++ b/quiz.3/index.html
@@ -22,6 +22,8 @@
             <h2>Resultados</h2>
             <p id="score"></p>
             <p id="ti-verde-text"></p>
+            <h2>Rank Online</h2>
+            <ul id="rank-list"></ul>
         </div>
     </div>
     <script src="script.js"></script>
