--- a/quiz.3/index.html
+++ b/quiz.3/index.html
@@ -3,27 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz sobre TI Verde</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Quiz de TI Verde e Sustentabilidade</title>
+    <link rel="stylesheet" href="style.css"> <!-- Corrigido para style.css -->
 </head>
 <body>
     <div class="container">
-        <h1>Quiz sobre TI Verde</h1>
+        <h1>Quiz de TI Verde e Sustentabilidade</h1>
         <div id="login-section">
             <input type="text" id="username" placeholder="Digite seu nome" required>
-            <button id="login-button">Entrar</button>
+            <button id="start-quiz">Iniciar Quiz</button>
         </div>
         <div id="quiz-section" style="display: none;">
-            <h2>Bem-vindo, <span id="user-name"></span>!</h2>
-            <form id="quiz-form"></form>
-            <button id="submit-quiz" style="display: none;">Enviar Respostas</button>
+            <div id="question-container"></div>
+            <div id="options-container"></div>
+            <button id="next-button" style="display: none;">Próxima Pergunta</button>
         </div>
         <div id="result-section" style="display: none;">
-            <h2>Resultados</h2>
-            <p id="score"></p>
-            <p id="ti-verde-text"></p>
-            <h2>Rank Online</h2>
-            <ul id="rank-list"></ul>
+            <h2 id="result"></h2>
+            <button id="more-info" style="display: none;">Saber Mais</button>
+            <div id="info-text" style="display: none;"></div>
         </div>
     </div>
     <script src="script.js"></script>
