--- a/quiz.3/index.html
+++ b/quiz.3/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz de TI Verde e Sustentabilidade</title>
-    <link rel="stylesheet" href="style.css"> <!-- Corrigido para style.css -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -22,6 +22,8 @@
             <h2 id="result"></h2>
             <button id="more-info" style="display: none;">Saber Mais</button>
             <div id="info-text" style="display: none;"></div>
+            <h2>Rank:</h2>
+            <ul id="rank-list"></ul>
         </div>
     </div>
     <script src="script.js"></script>
